Update x-pack/plugin/core/src/main/java/org/elasticsearch/xpack/core/datastreams/DataStreamLifecycleConvertToFrozen.java
Co-authored-by: Luke Whiting <luke.whiting@elastic.co>